--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
     <script src="js/title2.js"></script>
 
 </head>
-<body>
+<body oncontextmenu="return false;" onkeydown="return false;">
 
 <!-- particles.js container -->
 <div id="particles-js"></div>
@@ -66,6 +66,34 @@
         loop: false,
         smartBackspace: false,
     });
+</script>
+
+<script>
+    window.addEventListener('keydown', function (e) {
+            if (e.key === 'F5') {
+                location.reload();
+            }
+            else if (e.key === 'F11') {
+                toggleFullscreen();
+            }
+        },
+
+        false);
+
+    function getFullscreenElement() {
+        return document.fullscreenElement   //standard property
+            || document.webkitFullscreenElement //safari/opera support
+            || document.mozFullscreenElement    //firefox support
+            || document.msFullscreenElement;    //ie/edge support
+    }
+
+    function toggleFullscreen() {
+        if(getFullscreenElement()) {
+            document.exitFullscreen();
+        }else {
+            document.documentElement.requestFullscreen().catch(console.log);
+        }
+    }
 </script>
 
 
