--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="js/popup.js" type="text/javascript"></script>
 
 </head>
-<body>
+<body oncontextmenu="return false;" onkeydown="return false;">
 
 <video id="myVideo" loop>
     <source src="video/wiu.mp4" type="video/mp4">
@@ -128,6 +128,34 @@
         loop: true,
         smartBackspace: true,
     });
+</script>
+
+<script>
+    window.addEventListener('keydown', function (e) {
+            if (e.key === 'F5') {
+                location.reload();
+            }
+            else if (e.key === 'F11') {
+                toggleFullscreen();
+            }
+        },
+
+        false);
+
+    function getFullscreenElement() {
+        return document.fullscreenElement   //standard property
+            || document.webkitFullscreenElement //safari/opera support
+            || document.mozFullscreenElement    //firefox support
+            || document.msFullscreenElement;    //ie/edge support
+    }
+
+    function toggleFullscreen() {
+        if(getFullscreenElement()) {
+            document.exitFullscreen();
+        }else {
+            document.documentElement.requestFullscreen().catch(console.log);
+        }
+    }
 </script>
 
 
