added footer and idk

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body oncontextmenu="return false;" onkeydown="return false;">
 
-<video id="myVideo" loop>
+<video autoplay id="myVideo" loop>
     <source src="video/wiu.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
 </video>
@@ -94,6 +94,15 @@
 
     </div>
 </div>
+
+
+
+<footer id="footer">
+          <span class="copyright"
+          >Copyright © 2022
+            outuby.space</span
+          >
+</footer>
 
 <div class="modal" id="modal">
     <div class='modal__container'>
