--- a/404.html
+++ b/404.html
@@ -46,10 +46,16 @@
                 </a>
             </div>
         </div>
-
-
     </div>
 </div>
+
+
+<footer id="footer">
+          <span class="copyright"
+          >Copyright © 2022
+            outuby.space</span
+          >
+</footer>
 
 <script src="js/typed.js"></script>
 <script src="js/allah.js"></script>
