updated project page

--- a/404.html
+++ b/404.html
@@ -27,6 +27,8 @@
 </head>
 <body oncontextmenu="return false;" onkeydown="return false;">
 
+<!--TODO: add preloader-->
+
 <!-- particles.js container -->
 <div id="particles-js"></div>
 <div class="center">
