--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,8 @@
 
     <link href="img/outubyismygod.png" rel="icon" type="image/ico"/>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <!-- CSS -->
     <link href="css/particles.css" media="screen" rel="stylesheet">
     <link href="css/main.css" media="screen" rel="stylesheet">
@@ -28,73 +30,53 @@
 
 </head>
 <body oncontextmenu="return false;" onkeydown="return false;">
+<!--<body>-->
 
 <!--TODO: add preloader-->
-
-<video autoplay id="myVideo" loop>
-    <source src="video/wiu.mp4" type="video/mp4">
-    Your browser does not support HTML5 video.
-</video>
 
 <!-- particles.js container -->
 <div id="particles-js"></div>
 <div class="center">
     <!--        <div class="blur"></div>-->
     <div class="content">
-        <div class="otspace">
-            <h1 class="outubybig" onclick="playRandomSound();">Outuby</h1>
-            <p>space</p>
+        <div class="cockni">
+            <h1>Projects</h1>
         </div>
-        <div class="typed">
-            <h2><span class="type"></span></h2>
+        <br><br>
+
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="img/tirednextgen_CD.png" alt="Tired Client" style="border-radius: 2rem">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5><a href="https://tired-client.de">Tired Client</a></h5>
+                        <p>I'm the co-founder of Tired Client and handle the hosting and design of the website</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/Koks.png" alt="Koks Client" style="border-radius: 2rem">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5><a href="https://schummel.software">Koks Client</a></h5>
+                        <p>I take care of the hosting and web design of the schummel.software website</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/coming_soon.png" alt="Coming Soon..." style="border-radius: 2rem">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Coming Soon</h5>
+                        <p>This will be a future project of mine.... You will soon see what I spend my time on</p>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-
-        <!--              <div class="btnlist">-->
-        <!--                <a href="https://youtube.com/outuby" class="btnn"> <i class="fa-brands fa-youtube"></i> Youtube</a>-->
-        <!--                <a href="#" class="btnn" onclick="popup13()"> <i class="fa-regular fa-comment"></i> Contact</a>-->
-        <!--                <a href="projects/" class="btnn"> <i class="fa-solid fa-code"></i> Projects</a>-->
-        <!--              </div>-->
-
-
-<!--        TODO: position bei phone ist noch nicht ganz richtig, vllt einfach X20px adden idk     -->
-        <div class="wrap">
-            <div>
-                <a href="https://youtube.com/outuby">
-                    <p class='button'>
-                        <i class="fa-brands fa-youtube"></i>
-                        Youtube
-                    </p>
-                </a>
-            </div>
-            <div>
-                <a href="#" onclick="popup13()">
-                    <p class='button'>
-                        <i class="fa-regular fa-comment"></i>
-                        Contact
-                    </p>
-                </a>
-            </div>
-            <div>
-                <a href="projects.html">
-                    <p class='button'>
-                        <i class="fa-solid fa-code"></i>
-                        Projects
-                    </p>
-                </a>
-            </div>
-        </div>
-
-
-        <script>
-            var video=document.getElementById("myVideo")
-
-            function nigg() {
-                video.play();
-                video.muted = false;
-                video.volume = .2;
-            }
-
-        </script>
 
     </div>
 </div>
@@ -102,20 +84,8 @@
 
 
 <footer id="footer">
-          <span class="copyright"
-          >Copyright © 2022
-            outuby.space</span
-          >
+          <span class="copyright">Copyright © 2022 outuby.space</span>
 </footer>
-
-<div class="modal" id="modal">
-    <div class='modal__container'>
-        <div class="modal__content">
-            <h1 class="modal__title">click to enter<h1>
-        </div>
-        <i id="close" class="fas fa-times" style="font-size: 250rem; transform: translateY(-1700px) translateX(1200px); opacity: 0;" onclick="nigg();"></i>
-    </div>
-</div>
 
 <span id='player' style="transform: translateY(-1000px)"></span>
 
@@ -177,6 +147,10 @@
 <script src="js/particles.js"></script>
 <script src="js/app.js"></script>
 <script src="js/main.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 
 </body>
