phone button pos

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <!--TODO: add preloader-->
 
-<video autoplay id="myVideo" loop>
+<video id="myVideo" loop>
     <source src="video/wiu.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
 </video>
@@ -59,7 +59,7 @@
 <!--        TODO: position bei phone ist noch nicht ganz richtig, vllt einfach X20px adden idk     -->
         <div class="wrap">
             <div>
-                <a href="https://youtube.com/outuby">
+                <a href="https://youtube.com/outuby" target="_blank">
                     <p class='button'>
                         <i class="fa-brands fa-youtube"></i>
                         Youtube
