--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,7 @@
     <link href="css/particles.css" media="screen" rel="stylesheet">
     <link href="css/main.css" media="screen" rel="stylesheet">
     <link href="css/creativa-popup.css" rel="stylesheet">
+    <link href="css/test.css" rel="stylesheet">
 
     <!-- JS -->
     <script src="js/title.js"></script>
@@ -29,8 +30,8 @@
     <script src="js/popup.js" type="text/javascript"></script>
 
 </head>
-<body oncontextmenu="return false;" onkeydown="return false;">
-<!--<body>-->
+<!--<body oncontextmenu="return false;" onkeydown="return false;">-->
+<body>
 
 <!--TODO: add preloader-->
 
