--- a/projects.html
+++ b/projects.html
@@ -30,8 +30,8 @@
     <script src="js/popup.js" type="text/javascript"></script>
 
 </head>
-<!--<body oncontextmenu="return false;" onkeydown="return false;">-->
-<body>
+<body oncontextmenu="return false;" onkeydown="return false;">
+<!--<body>-->
 
 <!--TODO: add preloader-->
 
