--- a/index.html
+++ b/index.html
@@ -26,10 +26,30 @@
     <script src="js/creativa-popup.js" type="text/javascript"></script>
     <script src="js/popup.js" type="text/javascript"></script>
 
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const preloader = document.querySelector('.preloader');
+        preloader.classList.add('expand-fade-out');
+        setTimeout(function() {
+            preloader.classList.add('hidden');
+        }, 700);
+    });
+
+    window.addEventListener('beforeunload', function() {
+        const preloader = document.querySelector('.preloader');
+        preloader.style.opacity = 1;
+        preloader.classList.remove('hidden');
+    });
+</script>
+
 </head>
-<body oncontextmenu="return false;" onkeydown="return false;">
+<body oncontextmenu="return false;" onkeydown="return false;" style="overflow: hidden">
+<!--<body oncontextmenu="return false;" style="overflow: hidden">-->
 
 <!--TODO: add preloader-->
+<div class="preloader">
+    <img class="spin" src="img/outubyismygod.png" alt="Preloader" width="500px" height="auto">
+</div>
 
 <video id="myVideo" loop>
     <source src="video/wiu.mp4" type="video/mp4">
