--- a/404.html
+++ b/404.html
@@ -38,6 +38,16 @@
             preloader.style.opacity = 1;
             preloader.classList.remove('hidden');
         });
+
+
+        // reload the page 1 time
+        var count = 0;
+        function reload() {
+            if (count == 0) {
+                count++;
+                location.reload();
+            }
+        }
     </script>
 
 </head>
