--- a/404.html
+++ b/404.html
@@ -45,9 +45,9 @@
 <!--<body oncontextmenu="return false;" style="overflow: hidden">-->
 
 <!--TODO: add preloader-->
-<div class="preloader">
-    <img class="spin" src="img/outubyismygod.png" alt="Preloader" width="500px" height="auto">
-</div>
+<!--<div class="preloader">-->
+<!--    <img class="spin" src="img/outubyismygod.png" alt="Preloader" width="500px" height="auto">-->
+<!--</div>-->
 
 <!-- particles.js container -->
 <div id="particles-js"></div>
