--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
 <!--TODO: add preloader-->
 
-<div class="preloader">
-    <img class="spin" src="img/outubyismygod.png" alt="Preloader" width="500px" height="auto">
-</div>
+<!--<div class="preloader">-->
+<!--    <img class="spin" src="img/outubyismygod.png" alt="Preloader" width="500px" height="auto">-->
+<!--</div>-->
 
 <video id="myVideo" loop>
     <source src="video/wiu.mp4" type="video/mp4">
