--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <!--</div>-->
 
 <video id="myVideo" loop>
-    <source src="video/wiu.mp4" type="video/mp4">
+<!--    <source src="video/wiu.mp4" type="video/mp4">-->
     Your browser does not support HTML5 video.
 </video>
 
