--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </a>
             </div>
             <div>
-                <a href="projects.html">
+                <a href="projects">
                     <p class='button'>
                         <i class="fa-solid fa-code"></i>
                         Projects
@@ -120,8 +120,6 @@
     </div>
 </div>
 
-
-
 <footer id="footer">
           <span class="copyright"
           >Copyright © 2023
@@ -129,14 +127,14 @@
           >
 </footer>
 
-<div class="modal" id="modal">
-    <div class='modal__container'>
-        <div class="modal__content">
-            <h1 class="modal__title">click to enter<h1>
-        </div>
-        <i id="close" class="fas fa-times" style="font-size: 250rem; transform: translateY(-1700px) translateX(1200px); opacity: 0;" onclick="nigg();"></i>
-    </div>
-</div>
+<!--<div class="modal" id="modal">-->
+<!--    <div class='modal__container'>-->
+<!--        <div class="modal__content">-->
+<!--            <h1 class="modal__title">click to enter<h1>-->
+<!--        </div>-->
+<!--        <i id="close" class="fas fa-times" style="font-size: 250rem; transform: translateY(-1700px) translateX(1200px); opacity: 0;" onclick="nigg();"></i>-->
+<!--    </div>-->
+<!--</div>-->
 
 <span id='player' style="transform: translateY(-1000px)"></span>
 
