--- a/404.html
+++ b/404.html
@@ -9,20 +9,20 @@
     <meta content="outuby.space 👑" property="og:title"/>
     <meta content="if ur reading this sub to my yt" property="og:description"/>
     <meta content="https://outuby.space" property="og:url"/>
-    <meta content="/img/outubyismygod.png" property="og:image"/>
+    <meta content="https://outuby.space/img/outubyismygod.png" property="og:image"/>
     <meta content="#BD00FF" data-react-helmet="true" name="theme-color"/>
 
     <meta content="If you read this you have to subscribe to my yt :)" name="description">
 
-    <link href="img/outubyismygod.png" rel="icon" type="image/ico"/>
+    <link href="https://outuby.space/img/outubyismygod.png" rel="icon" type="image/ico"/>
 
     <!-- CSS -->
-    <link href="css/particles.css" media="screen" rel="stylesheet">
-    <link href="css/main.css" media="screen" rel="stylesheet">
-    <link href="css/creativa-popup.css" rel="stylesheet">
+    <link href="https://outuby.space/css/particles.css" media="screen" rel="stylesheet">
+    <link href="https://outuby.space/css/main.css" media="screen" rel="stylesheet">
+    <link href="https://outuby.space/css/creativa-popup.css" rel="stylesheet">
 
     <!-- JS -->
-    <script src="js/title2.js"></script>
+    <script src="https://outuby.space/js/title2.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
@@ -79,8 +79,8 @@
           >
 </footer>
 
-<script src="js/typed.js"></script>
-<script src="js/allah.js"></script>
+<script src="https://outuby.space/js/typed.js"></script>
+<script src="https://outuby.space/js/allah.js"></script>
 
 <script>
     var typed = new Typed('.type', {
@@ -127,9 +127,9 @@
 
 <!-- scripts -->
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/9105e9014d.js"></script>
-<script src="js/particles.js"></script>
-<script src="js/app.js"></script>
-<script src="js/main.js"></script>
+<script src="https://outuby.space/js/particles.js"></script>
+<script src="https://outuby.space/js/app.js"></script>
+<script src="https://outuby.space/js/main.js"></script>
 
 
 </body>
