--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 </head>
 <body oncontextmenu="return false;" onkeydown="return false;" style="overflow: hidden">
 <!--<body oncontextmenu="return false;" style="overflow: hidden">-->
+<!--<body style="overflow: hidden">-->
 
 <!--TODO: add preloader-->
 
@@ -151,7 +152,7 @@
             "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website",
             "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website",
             "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website",
-            "I dont have friends (except exeos, error and $kush)",
+            "I dont have friends (except exeos, error, skush and CodeMan)",
             "Keiner kann mich stoppen, nicht einmal ein Stoppschild",
         ],
         typeSpeed: 69,
