--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 <span id='player' style="transform: translateY(-1000px)"></span>
 
 <script src="js/typed.js"></script>
-<script src="js/allah.js"></script>
+<script src="js/needed.js"></script>
 
 <script>
     var typed = new Typed('.type', {
