--- a/projects.html
+++ b/projects.html
@@ -59,22 +59,22 @@
 <div class="center">
     <!--        <div class="blur"></div>-->
     <div class="content">
-        <div class="cockni">
+        <div class="ubschr">
             <h1>Projects</h1>
         </div>
         <br><br>
 
-        <div id="cock" class="carousel slide" data-ride="carousel">
+        <div id="mhm" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/tirednextgen_CD.png" alt="Tired Client" style="border-radius: 2rem">
+                    <img class="d-block w-100" src="img/tirednextgen_CD.png" alt="Tired Client" style="border-radius: 2rem" onclick="location.href = 'https://tired-client.de';">
                     <div class="carousel-caption d-none d-md-block">
                         <h5><a href="https://tired-client.de">Tired Client</a></h5>
-                        <p>I'm the co-founder of Tired Client and handle the hosting and design of the website</p>
+                        <p>I'm the co-founder of Tired Client and handle the hosting and design of the website. This project ended in 2022 - Thanks for everyone who supported us!</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/Koks.png" alt="Koks Client" style="border-radius: 2rem">
+                    <img class="d-block w-100" src="img/Koks.png" alt="Koks Client" style="border-radius: 2rem" onclick="location.href = 'https://schummel.software';">
                     <div class="carousel-caption d-none d-md-block">
                         <h5><a href="https://schummel.software">Koks Client</a></h5>
                         <p>I take care of the hosting and web design of the schummel.software website</p>
@@ -88,17 +88,20 @@
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#cock" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#mhm" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#cock" role="button" data-slide="next">
+            <a class="carousel-control-next" href="#mhm" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
         </div>
 
     </div>
+
+<!--    unten rechts noch einen back arrow hin machen -->
+
 </div>
 
 
@@ -110,7 +113,6 @@
 <span id='player' style="transform: translateY(-1000px)"></span>
 
 <script src="js/typed.js"></script>
-<script src="js/allah.js"></script>
 
 <script>
     var typed = new Typed('.type', {
