--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 </head>
 <body oncontextmenu="return false;" onkeydown="return false;" style="overflow: hidden">
+
 <!--<body oncontextmenu="return false;" style="overflow: hidden">-->
 <!--<body style="overflow: hidden">-->
 
@@ -110,7 +111,7 @@
         <script>
             var video=document.getElementById("myVideo")
 
-            function nigg() {
+            function vidunmute() {
                 video.play();
                 video.muted = false;
                 video.volume = .2;
@@ -133,7 +134,7 @@
 <!--        <div class="modal__content">-->
 <!--            <h1 class="modal__title">click to enter<h1>-->
 <!--        </div>-->
-<!--        <i id="close" class="fas fa-times" style="font-size: 250rem; transform: translateY(-1700px) translateX(1200px); opacity: 0;" onclick="nigg();"></i>-->
+<!--        <i id="close" class="fas fa-times" style="font-size: 250rem; transform: translateY(-1700px) translateX(1200px); opacity: 0;" onclick="vidunmute();"></i>-->
 <!--    </div>-->
 <!--</div>-->
 
