--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PW87BT2BNH"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-PW87BT2BNH');
+    </script>
     <meta charset="utf-8">
-    <title>Outuby</title>
+    <title>Outubys Projects</title>
     <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
           name="viewport">
 
@@ -63,7 +72,6 @@
             <h1>Projects</h1>
         </div>
         <br><br>
-
         <div id="mhm" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -97,14 +105,9 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-
     </div>
-
 <!--    unten rechts noch einen back arrow hin machen -->
-
 </div>
-
-
 
 <footer id="footer">
           <span class="copyright">Copyright © 2023 outuby.space</span>
