--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google tag (gtag.js) -->
+<!--     Google tag (gtag.js)-->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PW87BT2BNH"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -30,6 +30,8 @@
     <link href="css/particles.css" media="screen" rel="stylesheet">
     <link href="css/main.css" media="screen" rel="stylesheet">
     <link href="css/creativa-popup.css" rel="stylesheet">
+    <link href="css/test.css" rel="stylesheet">
+
 
     <!-- JS -->
     <script src="js/title.js"></script>
@@ -54,6 +56,10 @@
 
 </head>
 <body oncontextmenu="return false;" onkeydown="return false;" style="overflow: hidden">
+
+<div id="popupSM">
+    <p id="popup-messageSM"></p>
+</div>
 
 <!--<body oncontextmenu="return false;" style="overflow: hidden">-->
 <!--<body style="overflow: hidden">-->
