--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
           name="viewport">
 
+    <meta content="outuby,outuby youtube,outuby website,outuby.space,outuby website,tired client,koks client" name="keywords">
+
     <meta content="outuby.space 👑" property="og:title"/>
     <meta content="if ur reading this sub to my yt" property="og:description"/>
     <meta content="https://outuby.space" property="og:url"/>
