--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,7 @@
     <title>Outubys Projects</title>
     <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
           name="viewport">
+    <meta content="outuby,outuby youtube,outuby website,outuby.space,outuby website,tired client,koks client,outubys projects,outuby projects" name="keywords">
 
     <meta content="outuby.space 👑" property="og:title"/>
     <meta content="if ur reading this sub to my yt" property="og:description"/>
