--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website",
             "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website",
             "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website",
-            "I dont have friends (except Exeos, Felix, Rrror, Skush and CodeMan)",
+            "I dont have friends (except Exeos, Felix, Error, Skush and CodeMan)",
             "Keiner kann mich stoppen, nicht einmal ein Stoppschild",
         ],
         typeSpeed: 69,
