--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
                     <img class="d-block w-100" src="img/tirednextgen_CD.png" alt="Tired Client" style="border-radius: 2rem" onclick="location.href = 'https://tired-client.de';">
                     <div class="carousel-caption d-none d-md-block">
                         <h5><a href="https://tired-client.de">Tired Client</a></h5>
-                        <p>I'm the co-founder of Tired Client and handle the hosting and design of the website. This project ended in 2022 - Thanks for everyone who supported us!</p>
+                        <p>I'm the co-founder of Tired Client and handle the hosting and design of the website. This project ended in 2022</p>
                     </div>
                 </div>
                 <div class="carousel-item">
