--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body oncontextmenu="return false;" onkeydown="return false;" style="overflow: hidden">
 
 <div id="popupSM">
-    <p id="popup-messageSM"></p>
+<!--    <p id="popup-messageSM"></p>-->
 </div>
 
 <!--<body oncontextmenu="return false;" style="overflow: hidden">-->
@@ -71,8 +71,8 @@
 <!--    <img class="spin" src="img/outubyismygod.png" alt="Preloader" width="500px" height="auto">-->
 <!--</div>-->
 
-<video id="myVideo" loop>
-<!--    <source src="video/wiu.mp4" type="video/mp4">-->
+<video id="myVideo" loop autoplay muted>
+    <source src="video/Bg.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
 </video>
 
@@ -141,7 +141,10 @@
 
 <footer id="footer">
           <span class="copyright"
-          >Copyright © 2023
+          >Copyright ©
+            <script>
+                document.write(new Date().getFullYear());
+            </script>
             outuby.space</span
           >
 </footer>
