--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
         gtag('config', 'G-PW87BT2BNH');
     </script>
     <meta charset="utf-8">
-    <title>Outubys Projects</title>
+    <title>Outubys</title>
     <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
           name="viewport">
     <meta content="outuby,outuby youtube,outuby website,outuby.space,outuby website,tired client,koks client,outubys projects,outuby projects" name="keywords">
@@ -35,9 +35,37 @@
     <link href="css/test.css" rel="stylesheet">
 
     <!-- JS -->
-    <script src="js/title.js"></script>
+<!--    <script src="js/title.js"></script>-->
     <script src="js/creativa-popup.js" type="text/javascript"></script>
     <script src="js/popup.js" type="text/javascript"></script>
+
+    <script>
+        if(document.addEventListener){
+            document.addEventListener("DOMContentLoaded", function(){
+                loaded();
+            });
+        } else if(document.attachEvent){
+            document.attachEvent("onreadystatechange", function(){
+                loaded();
+            });
+        }
+
+        function loaded(){
+
+            setInterval(loop, 1500);
+
+        }
+
+        var x = 0;
+
+        var titleText = [ "Outubys", "Projects"];
+
+        function loop(){
+
+            document.getElementsByTagName("title")[0].innerHTML = titleText[x++%titleText.length];
+
+        }
+    </script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
@@ -54,7 +82,6 @@
             preloader.classList.remove('hidden');
         });
     </script>
-
 </head>
 <body oncontextmenu="return false;" onkeydown="return false;" style="overflow: hidden">
 <!--<body oncontextmenu="return false;" style="overflow: hidden">-->
@@ -64,33 +91,41 @@
 <!--    <img class="spin" src="img/outubyismygod.png" alt="Preloader" width="500px" height="auto">-->
 <!--</div>-->
 
+<video id="myVideo" loop autoplay muted>
+    <source src="video/Bg.mp4" type="video/mp4">
+    Your browser does not support HTML5 video.
+</video>
+
 <!-- particles.js container -->
 <div id="particles-js"></div>
 <div class="center">
     <!--        <div class="blur"></div>-->
     <div class="content">
         <div class="ubschr">
-            <h1>Projects</h1>
+<!--            <h1>Projects</h1>-->
+            <div class="typed">
+                <h2><span class="type"></span></h2>
+            </div>
         </div>
         <br><br>
-        <div id="mhm" class="carousel slide" data-ride="carousel">
+        <div id="mhm" class="carousel slide" data-ride="carousel" style="filter: drop-shadow(10px 10px 10px black)">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/tirednextgen_CD.png" alt="Tired Client" style="border-radius: 2rem" onclick="location.href = 'https://tired-client.de';">
+                    <img class="d-block w-100" src="img/tirednextgen_CD.png" alt="Tired Client" style="border-radius: 2rem;" onclick="location.href = 'https://tired-client.de';">
                     <div class="carousel-caption d-none d-md-block">
                         <h5><a href="https://tired-client.de">Tired Client</a></h5>
                         <p>I'm the co-founder of Tired Client and handle the hosting and design of the website. This project ended in 2022</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/Koks.png" alt="Koks Client" style="border-radius: 2rem" onclick="location.href = 'https://schummel.software';">
+                    <img class="d-block w-100" src="img/Koks.png" alt="Koks Client" style="border-radius: 2rem;" onclick="location.href = 'https://schummel.software';">
                     <div class="carousel-caption d-none d-md-block">
                         <h5><a href="https://schummel.software">Koks Client</a></h5>
                         <p>I take care of the hosting and web design of the schummel.software website</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/coming_soon.png" alt="Coming Soon..." style="border-radius: 2rem">
+                    <img class="d-block w-100" src="img/coming_soon.png" alt="Coming Soon..." style="border-radius: 2rem;">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Coming Soon</h5>
                         <p>This will be a future project of mine.... You will soon see what I spend my time on</p>
@@ -107,11 +142,18 @@
             </a>
         </div>
     </div>
-<!--    unten rechts noch einen back arrow hin machen -->
 </div>
+<!-- add hover text -->
+<a href="https://outuby.space/" class="back-arrow"><i class="fa-solid fa-arrow-left"></i></a>
 
 <footer id="footer">
-          <span class="copyright">Copyright © 2023 outuby.space</span>
+          <span class="copyright"
+          >Copyright ©
+            <script>
+                document.write(new Date().getFullYear());
+            </script>
+            outuby.space</span
+          >
 </footer>
 
 <span id='player' style="transform: translateY(-1000px)"></span>
@@ -121,20 +163,12 @@
 <script>
     var typed = new Typed('.type', {
         strings: [
-            "I'm a german web developer",
-            "I'm a designer",
-            "I'm a liar",
-            "I'm retarded",
-            "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website",
-            "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website",
-            "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website",
-            "I dont have friends (except exeos, error and $kush)",
-            "Keiner kann mich stoppen, nicht einmal ein Stoppschild",
+            "Projects",
         ],
-        typeSpeed: 69,
+        typeSpeed: 150,
         backSpeed: 32,
         backDelay: 1500,
-        loop: true,
+        loop: false,
         smartBackspace: true,
     });
 </script>
