--- a/projects.html
+++ b/projects.html
@@ -92,7 +92,7 @@
 <!--</div>-->
 
 <video id="myVideo" loop autoplay muted>
-    <source src="video/Bg.mp4" type="video/mp4">
+    <source src="video/Bg2.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
 </video>
 
