--- a/projects.html
+++ b/projects.html
@@ -97,14 +97,14 @@
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="img/tirednextgen_CD.png" alt="Tired Client" style="border-radius: 2rem;" onclick="location.href = 'https://tired-client.de';">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5><a href="https://tired-client.de">Tired Client - Offline</a></h5>
+                        <h5><a href="https://outuby.space/tired-client-de">Tired Client - Offline</a></h5>
                         <p>I'm the co-founder of Tired Client (tired-client.de) and handle the hosting and design of the website. This project ended in 2022</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="img/Koks.png" alt="Koks Client" style="border-radius: 2rem;" onclick="location.href = 'https://schummel.software';">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5><a href="https://schummel.software">Koks Client - Offline</a></h5>
+                        <h5><a href="https://outuby.space/schummel-software">Koks Client - Offline</a></h5>
                         <p>I take care of the hosting and web design of the schummel.software website</p>
                     </div>
                 </div>
