--- a/tired-client-de/index.html
+++ b/tired-client-de/index.html
@@ -11,7 +11,7 @@
         gtag('config', 'G-PW87BT2BNH');
     </script>
     <meta charset="utf-8">
-    <title>Outubys Projects</title>
+    <title>Tired</title>
     <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
           name="viewport">
     <meta content="outuby,outuby youtube,outuby website,outuby.space,outuby website,tired client,koks client,outubys projects,outuby projects" name="keywords">
@@ -59,7 +59,7 @@
 
         var x = 0;
 
-        var titleText = [ "Outubys", "Projects"];
+        var titleText = [ "Tired", "Client"];
 
         function loop(){
 
@@ -98,20 +98,22 @@
             <h2><span class="type"></span></h2>
         </div>
     </div>
-    <br><br><br>
+    <br><br><br><br>
 
         <div class="wrap" style="">
             <div>
                 <a href="https://outuby.space/tired-client-de/v1">
-                    <p class='button'>
-                        V1
+                    <p class='button2'>
+                        V1 (Tired Client)
+                        <br><span style="font-size: 15px; line-height: 0">not responsive</span>
                     </p>
                 </a>
             </div>
             <div>
                 <a href="https://outuby.space/tired-client-de/v2">
-                    <p class='button'>
-                        V2
+                    <p class='button2'>
+                        V2 (Tired Nextgen)
+                        <br><span style="font-size: 15px; line-height: 0">responsive</span>
                     </p>
                 </a>
             </div>
