webhook delete thing and yeah

--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
     </div>
 </div>
 
+<a href="https://outuby.space/webhook" class="webhook"><i class="fa-brands fa-discord"></i> Webhook Tool</a>
+
 <footer id="footer">
           <span class="copyright"
           >Copyright ©
