--- a/webhook.html
+++ b/webhook.html
@@ -164,7 +164,7 @@
 <script src="js/particles.js"></script>
 <script src="js/oh_no.js"></script>
 <script src="js/app.js"></script>
-<script src="js/popup2ig.js.js"></script>
+<script src="js/popup2ig.js"></script>
 <script src="js/main.js"></script>
 
 
