--- a/webhook.html
+++ b/webhook.html
@@ -16,7 +16,7 @@
           name="viewport">
 
     <meta content="outuby.space 👑" property="og:title"/>
-    <meta content="if ur reading this sub to my yt" property="og:description"/>
+    <meta content="Send messages to a Discord webhook or just delete the webhook to annoy someone" property="og:description"/>
     <meta content="https://outuby.space" property="og:url"/>
     <meta content="https://outuby.space/img/outubyismygod.png" property="og:image"/>
     <meta content="#BD00FF" data-react-helmet="true" name="theme-color"/>
