phone performance fix (kinda)

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
 </head>
 <body oncontextmenu="return false;" onkeydown="return false;" style="overflow: hidden">
+<!--<body style="overflow: hidden">-->
 
 <div id="popupSM">
 <!--    <p id="popup-messageSM"></p>-->
@@ -55,12 +56,10 @@
     <img class="spin" src="img/outubyismygod.png" alt="Preloader" width="300px" height="auto">
 </div>
 
-<video id="myVideo" loop autoplay muted>
-    <source src="video/Bg2.mp4" type="video/mp4">
-    Your browser does not support HTML5 video.
-</video>
+<div id="background-container"></div>
 
 <!-- particles.js container -->
+<!-- TODO: auf phone anpassen -->
 <div id="particles-js"></div>
 <div class="center">
 <!--    <div class="effect"></div>-->
@@ -73,13 +72,6 @@
         <div class="typed">
             <h2><span class="type"></span></h2>
         </div>
-
-        <!--              <div class="btnlist">-->
-        <!--                <a href="https://youtube.com/outuby" class="btnn"> <i class="fa-brands fa-youtube"></i> Youtube</a>-->
-        <!--                <a href="#" class="btnn" onclick="popup13()"> <i class="fa-regular fa-comment"></i> Contact</a>-->
-        <!--                <a href="projects/" class="btnn"> <i class="fa-solid fa-code"></i> Projects</a>-->
-        <!--              </div>-->
-
 
 <!--        TODO: position bei phone ist noch nicht ganz richtig, vllt einfach X20px adden idk     -->
         <div class="wrap">
