--- a/tired-client-de/index.html
+++ b/tired-client-de/index.html
@@ -68,8 +68,8 @@
         }
     </script>
 </head>
-<body oncontextmenu="return false;" onkeydown="return false;" style="overflow: hidden">
-<body oncontextmenu="return false;" onkeydown="return false;" style="overflow: hidden">
+<!--<body oncontextmenu="return false;" onkeydown="return false;" style="overflow: hidden">-->
+<body style="overflow: hidden">
 
 <div id="popupSM">
     <!--    <p id="popup-messageSM"></p>-->
@@ -84,10 +84,7 @@
     <img class="spin" src="../img/outubyismygod.png" alt="Preloader" width="300px" height="auto">
 </div>
 
-<video id="myVideo" loop autoplay muted>
-    <source src="../video/Bg2.mp4" type="video/mp4">
-    Your browser does not support HTML5 video.
-</video>
+<div id="background-container"></div>
 
 <!-- particles.js container -->
 <div id="particles-js"></div>
