--- a/404.html
+++ b/404.html
@@ -42,10 +42,7 @@
     <img class="spin" src="img/outubyismygod.png" alt="Preloader" width="300px" height="auto">
 </div>
 
-<video id="myVideo" loop autoplay muted>
-    <source src="video/Bg2.mp4" type="video/mp4">
-    Your browser does not support HTML5 video.
-</video>
+<div id="background-container"></div>
 
 <!-- particles.js container -->
 <div id="particles-js"></div>
