--- a/tired-client-de/index.html
+++ b/tired-client-de/index.html
@@ -75,6 +75,11 @@
     <!--    <p id="popup-messageSM"></p>-->
 </div>
 
+<!-- redirect to https://outuby.space/tired-client-de/v2 -->
+<script>
+    window.location.replace("https://outuby.space/tired-client-de/v2");
+</script>
+
 <!--<body oncontextmenu="return false;" style="overflow: hidden">-->
 <!--<body style="overflow: hidden">-->
 
