--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
     </div>
 </div>
 
-<a href="https://outuby.space/webhook" class="webhook"><i class="fa-brands fa-discord"></i> Webhook Tool</a>
+<div class="other-tools">
+<a href="https://outuby.space/skiddetector"><i class="fa-regular fa-paste"></i> Skid List</a> <br>
+<a href="https://outuby.space/webhook"><i class="fa-brands fa-discord"></i> Webhook Tool</a>
+</div>
 
 <footer id="footer">
           <span class="copyright"
